[package]
name = "bigdecimal"
version = "0.4.0+dev"
authors = ["Andrew Kubera"]
description = "Arbitrary precision decimal numbers"
documentation = "https://docs.rs/bigdecimal"
homepage = "https://github.com/akubera/bigdecimal-rs"
repository = "https://github.com/akubera/bigdecimal-rs"
keywords = [
    "mathematics",
    "numerics",
    "bignum",
    "decimal",
    "arbitrary-precision",
    "floating-point",
    "no-std",
]
license = "MIT/Apache-2.0"
autobenches = false

[lib]
bench = false

[dependencies]
libm = "0.2.6"
num-bigint = { version = "0.4", default-features = false }
num-integer = { version = "0.1", default-features = false }
num-traits = { version = "0.2", default-features = false }
serde = { version = "1.0", optional = true, default-features = false }

[dev-dependencies]
paste = "1"
serde_json = "1.0"
siphasher = { version = "0.3.10", default-features = false }
# The following dev-dependencies are only required for benchmarking
#   (use the `benchmark-bigdecimal` script to uncomment these and run benchmarks)
# BENCH: criterion = { version = "0.4", features = [ "html_reports" ] }
# BENCH: oorandom = { version = "11.1.3" }
# BENCH: lazy_static = { version = "1" }

[features]
default = ["std"]
string-only = []
std = ["num-bigint/std", "num-integer/std", "num-traits/std"]

[[bench]]
name = "arithmetic"
harness = false
