[package]
name = "bigdecimal"
version = "0.4.10"
authors = ["Andrew Kubera"]
description = "Arbitrary precision decimal numbers"
documentation = "https://docs.rs/bigdecimal"
homepage = "https://github.com/akubera/bigdecimal-rs"
repository = "https://github.com/akubera/bigdecimal-rs"
keywords = [
    "numerics",
    "bignum",
    "decimal",
    "arbitrary-precision",
]
categories = [ "mathematics", "science", "no-std" ]
license = "MIT/Apache-2.0"
autobenches = false
edition = "2015"
include = [
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "README.md",
  "build.rs",
  "src/**/*.rs",
]

[lib]
bench = false

[dependencies]
libm = "0.2.6"
num-bigint = { version = "0.4", default-features = false }
num-integer = { version = "0.1", default-features = false }
num-traits = { version = "0.2", default-features = false }
serde = { version = "1.0", optional = true, default-features = false }
# Allow direct parsing of JSON floats, for full arbitrary precision
serde_json = { version = "1.0", optional = true, default-features = false, features = ["alloc", "arbitrary_precision"]}

[dev-dependencies]
paste = "1"
serde_test = "<1.0.176"
siphasher = { version = "0.3.10", default-features = false }
# The following dev-dependencies are only required for benchmarking
#   (use the `benchmark-bigdecimal` script to uncomment these and run benchmarks)
# BENCH: criterion = { version = "0.4", features = [ "html_reports" ] }
# BENCH: oorandom = { version = "11.1.3" }
# BENCH: lazy_static = { version = "1" }

# Only required for property testing - incompatible with older versions of rust
# PROPERTY-TESTS: proptest = "1"

[build-dependencies]
autocfg = "1"

[features]
default = ["std"]
serde-json = ["serde/derive", "serde_json"]
string-only = []
std = ["num-bigint/std", "num-integer/std", "num-traits/std"]

# BENCH: [[bench]]
# BENCH: name = "arithmetic"
# BENCH: harness = false

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(no_track_caller)'] }
